--- a/Ionic/SqliteSyncDemo/package.json
+++ b/Ionic/SqliteSyncDemo/package.json
@@ -32,6 +32,7 @@
   },
   "devDependencies": {
     "@ionic/app-scripts": "2.1.3",
+    "@ionic/cli-plugin-cordova": "1.5.0",
     "@ionic/cli-plugin-ionic-angular": "1.4.0",
     "ionic": "3.6.0",
     "typescript": "2.3.4"
