--- a/Ionic/SqliteSyncDemo/package.json
+++ b/Ionic/SqliteSyncDemo/package.json
@@ -35,7 +35,8 @@
         "ionicons": "3.0.0",
         "rxjs": "5.4.0",
         "sw-toolbox": "3.6.0",
-        "zone.js": "0.8.12"
+        "zone.js": "0.8.12",
+        "cordova-sqlite-storage": "~2.0.4"
     },
     "devDependencies": {
         "@ionic/app-scripts": "2.1.3",
@@ -52,7 +53,8 @@
             "cordova-plugin-splashscreen": {},
             "cordova-plugin-statusbar": {},
             "cordova-plugin-whitelist": {},
-            "ionic-plugin-keyboard": {}
+            "ionic-plugin-keyboard": {},
+            "cordova-sqlite-storage": {}
         },
         "platforms": [
             "android"
