--- a/Ionic/SqliteSyncDemo/package.json
+++ b/Ionic/SqliteSyncDemo/package.json
@@ -25,12 +25,12 @@
         "@ionic-native/sqlite": "^4.2.1",
         "@ionic-native/status-bar": "3.12.1",
         "@ionic/storage": "2.0.1",
-        "cordova-ios": "^4.4.0",
-        "cordova-plugin-device": "^1.1.4",
-        "cordova-plugin-splashscreen": "^4.0.3",
-        "cordova-plugin-statusbar": "^2.2.2",
-        "cordova-plugin-whitelist": "^1.3.1",
-        "cordova-sqlite-storage": "^2.0.4",
+        "cordova-android": "7.1.4",
+        "cordova-plugin-device": "^1.1.7",
+        "cordova-plugin-splashscreen": "^4.1.0",
+        "cordova-plugin-statusbar": "^2.4.2",
+        "cordova-plugin-whitelist": "^1.3.3",
+        "cordova-sqlite-storage": "^2.6.0",
         "ionic-angular": "3.6.1",
         "ionic-plugin-keyboard": "^2.2.1",
         "ionicons": "3.0.0",
@@ -55,7 +55,7 @@
             "cordova-sqlite-storage": {}
         },
         "platforms": [
-            "ios"
+            "android"
         ]
     }
 }
