--- a/amplisync-clients/Ionic/SqliteSyncDemo/package.json
+++ b/amplisync-clients/Ionic/SqliteSyncDemo/package.json
@@ -25,12 +25,13 @@
         "@ionic-native/sqlite": "^4.2.1",
         "@ionic-native/status-bar": "3.12.1",
         "@ionic/storage": "2.0.1",
-        "cordova-android": "7.1.4",
+        "cordova-android": "^8.1.0",
+        "cordova-ios": "^5.1.1",
         "cordova-plugin-device": "^1.1.7",
         "cordova-plugin-splashscreen": "^4.1.0",
-        "cordova-plugin-statusbar": "^2.4.2",
-        "cordova-plugin-whitelist": "^1.3.3",
-        "cordova-sqlite-storage": "^2.6.0",
+        "cordova-plugin-statusbar": "2.4.3",
+        "cordova-plugin-whitelist": "1.3.4",
+        "cordova-sqlite-storage": "^4.0.0",
         "ionic-angular": "3.6.1",
         "ionic-plugin-keyboard": "^2.2.1",
         "ionicons": "3.0.0",
@@ -49,12 +50,13 @@
         "plugins": {
             "cordova-plugin-device": {},
             "cordova-plugin-splashscreen": {},
-            "cordova-plugin-statusbar": {},
-            "cordova-plugin-whitelist": {},
             "ionic-plugin-keyboard": {},
+            "cordova-plugin-whitelist": {},
+            "cordova-plugin-statusbar": {},
             "cordova-sqlite-storage": {}
         },
         "platforms": [
+            "ios",
             "android"
         ]
     }
